--- a/Lesson2/css/lesson2.css
+++ b/Lesson2/css/lesson2.css
@@ -29,7 +29,7 @@ main div,div header,footer{
     margin-left: center;
     border: 1px solid #0077B6;
     padding: 10px;
-    box-shadow: 3px 3px 3px #03045E;
+    box-shadow: 3px 3px 3px white;
     
 }
 
